# hiro

./: .env.example  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  addition_phase2_questions.md  alembic.ini  cookie_sessions.yaml.example  db_layer.md  db_layer_implementation_plan.md  debug_types.py  docker-compose.test.yml  docker-compose.yml  phase_2_questions.md  preliminary_thoughts.md  pyproject.toml  test_http_tool.py  test_schema.py  web_overlay_plan.md
.ai/: README.md  architecture-decisions.md  claude-code-instructions.md  coding-standards.md  project-context.md  quick-reference.md
.ai/adrs/: 001-src-layout.md  002-mirror-test-structure.md  003-uv-dependency-management.md  004-makefile-interface.md  005-cli-framework.md  006-module-organization.md  007-configuration-management.md  008-error-handling.md  009-composition-over-inheritance.md  010-deep-modules.md  011-isolate-frameworks.md  012-self-descriptive-codes.md  013-limit-nesting.md  014-mcp-parameter-transformation.md  015-cookie-session-management.md  018-comprehensive-validation-errors.md  ADR-016-mission-context-management.md  ADR-017-mission-tools-separation.md  template.md
.ai/standards/: git-commits.md  python-style.md  testing.md
.claude/agents/: code-reviewer.md  python-architect.md  ui-designer.md
.github/workflows/: ci.yml
scripts/: update_ai_config.py
src/code_mcp/: __init__.py  cli.py
src/code_mcp/api/: __init__.py
src/code_mcp/api/mcp/: server.py
src/code_mcp/core/: __init__.py
src/code_mcp/core/config/: __init__.py  settings.py
src/code_mcp/core/mcp/: __init__.py  exceptions.py  protocols.py
src/code_mcp/db/: __init__.py  connection.py  lazy_repository.py  models.py  repositories.py
src/code_mcp/db/migrations/: env.py
src/code_mcp/servers/: README.md  __init__.py
src/code_mcp/servers/ai_logging/: providers.py  tools.py
src/code_mcp/servers/http/: __init__.py  config.py  providers.py  tools.py
src/code_mcp/utils/: __init__.py  schema.py
src/hiro/: __init__.py  cli.py
src/hiro/api/: __init__.py
src/hiro/api/mcp/: __init__.py  providers.py  server.py
src/hiro/core/: __init__.py
src/hiro/core/config/: settings.py
src/hiro/core/mcp/: validation.py
src/hiro/core/vector/: __init__.py  embeddings.py  search.py
src/hiro/db/: __init__.py  connection.py  database.py  lazy_repository.py  models.py  repositories.py  schemas.py
src/hiro/db/migrations/: env.py
src/hiro/db/migrations/versions/: 00837ac53bc2_add_pgvector_and_test_actions.py  01ec0f0735be_add_context_versioning.py  3e86b93dd6ea_initial_schema_with_targets_notes_.py  441816bc75d0_remove_redundant_target_attempts.py  52ab4279ea02_remove_unused_target_notes.py  a054a87b8494_merge_migrations.py  c2a0bd763e48_rename_aisession_to_mission.py
src/hiro/servers/: README.md
src/hiro/servers/ai_logging/: __init__.py  providers.py  tools.py
src/hiro/servers/http/: config.py  cookie_sessions.py  providers.py  tools.py
src/hiro/servers/missions/: __init__.py  core_tools.py  library_tools.py  provider.py  search_tools.py  simplified_provider.py
src/hiro/servers/prompts/: __init__.py  provider.py
src/hiro/servers/prompts/guides/: context_patterns.yaml  mission_guide.yaml  quickstart.yaml  tool_usage_guide.yaml.old
src/hiro/utils/: __init__.py  xdg.py
src/hiro/web/: __init__.py  app.py
src/hiro/web/routers/: api.py  missions.py  targets.py
src/hiro/web/services/: mission_service.py  target_service.py
src/hiro/web/static/css/: main.css
src/hiro/web/static/js/: app.js
src/hiro/web/templates/: base.html  error.html  target.html  targets.html
src/hiro/web/templates/components/: target_card.html  target_header.html  target_list.html
src/hiro/web/templates/missions/: create.html  detail.html  list.html  record_action.html
tests/: __init__.py  conftest.py
tests/core/: test_example.py
tests/core/mcp/: test_validation.py
tests/fixtures/: __init__.py  database.py  docker.py  factories.py
tests/integration/: __init__.py  test_cookie_sessions_mcp.py  test_http_mcp.py  test_mission_tools.py  test_pgvector_integration.py  test_pgvector_simple.py  test_protocols.py  test_server_integration.py
tests/servers/ai_logging/: __init__.py  conftest.py  test_context_tools.py  test_tools.py  test_tools_boolean_coercion.py
tests/servers/http/: __init__.py  test_config.py  test_cookie_profiles.py  test_cookie_sessions.py  test_cookie_sessions_integration.py  test_providers.py  test_tools.py  test_validation_improvements.py
tests/servers/prompts/: __init__.py  test_provider.py
tests/utils/: mcp_test_helpers.py  test_xdg.py
tests/web/: conftest.py  test_api.py  test_app.py  test_integration.py  test_mission_routes.py  test_target_service.py
tests/web/routers/: test_api.py  test_targets.py
tests/web/services/: test_target_service.py
