[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code_mcp"
version = "0.1.0"
description = "Getting started with MCP stuff"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Kyle Keefer", email = "kwkeefer@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "click>=8.1.0",
    "fastmcp>=2.12.2",
    "httpx>=0.28.1",
    "pre-commit>=4.3.0",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.5.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
]

[project.scripts]
code_mcp = "code_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/kwkeefer/code_mcp"
Repository = "https://github.com/kwkeefer/code_mcp"
Issues = "https://github.com/kwkeefer/code_mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/code_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.coverage.run]
source_pkgs = ["code_mcp"]
branch = true
parallel = true
omit = [
    "src/code_mcp/__init__.py",
]

[tool.coverage.paths]
code_mcp = ["src/code_mcp", "*/code_mcp/src/code_mcp"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["code_mcp"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start permissive
check_untyped_defs = true      # But still check typed code
warn_redundant_casts = true    # Catch obvious issues
warn_unused_ignores = true     # Keep ignores clean
no_implicit_reexport = true
namespace_packages = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Gradually enable stricter checks
[[tool.mypy.overrides]]
module = "code_mcp.core.*"
disallow_untyped_defs = true   # Strict for core modules

[[tool.mypy.overrides]]
module = "code_mcp.models.*"
disallow_untyped_defs = true   # Strict for data models

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.12",
]
test = [
    "pytest-asyncio>=1.1.0",
]
